# rust_webservice

./: .env  .env.example  Cargo.toml  README.MD  build.rs  diesel.toml  rocket.toml
migrations/2022-06-12-113539_create_user/: up.sql
migrations/2022-06-12-143531_create_verification_token/: down.sql  up.sql
migrations/2022-06-12-144908_create_password_reset_token/: down.sql  up.sql
proto/: address.proto  authenticate.proto  user_details_client.proto
src/: main.rs
src/controllers/: controller_one.rs  mod.rs
src/database/: database_utils.rs  mod.rs  models.rs  schema.rs
src/database/models/: mod.rs  password_reset_token.rs  posts.rs  schema.rs  user.rs  verification_token.rs
src/grpc/: auth_service.rs  grpc_server.rs  mod.rs  server.rs  user_details_service.rs
src/mail/: mail_utils.rs  mod.rs
src/redis/: mod.rs  redis_utils.rs
src/security/: jwt_utils.rs  mod.rs
src/security/tokens/: invalidated_token.rs  mod.rs
src/webserver/: controller_one.rs  controller_two.rs  mod.rs  server.rs
src/webserver/controllers/: controller_one.rs  controller_two.rs  mod.rs  rest_controller.rs
static/css/: error.css  main.css
static/js/: index.js
templates/: 404.html.tera  500.html.tera  index.html.tera
