[package]
name = "rust_webservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["mysql"] } #ORM framework
redis = "0.21.5" #Rust redis library

dotenv = "0.15.0" #env library
dotenv_codegen = "0.15.0"

reqwest = { version = "0.11", features = ["blocking", "json"] } #http

serde = {version = "1.0.137", features = ["derive"]} #serialization
serde_json = "1.0.81" #json_serialization

tonic = "0.7.2" #gRPC
prost = "0.10.4" #protobuff
prost-types = "0.10.1" #well known types / google
tokio = {version = "1.18.2", features = ["full"]} #async runtime
tokio-cron-scheduler = "0.7.0" #Cron scheduler using tokio

rocket = "0.5.0-rc.2" #web framework
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["tera"]} #templating for rocket

jwt = "0.16.0" #JSON Web Tokens lib

base64 = "0.13.0"
crypto-common = "0.1.3"
digest = "0.10.3"
hmac = { version = "0.12.1", features = ["reset"] }
sha2 = "0.10.2"
bcrypt = "0.13.0"

chrono = {version = "0.4.19", features = ["serde"]}

lettre = "0.10.0-rc.7"
lettre_email = "0.9.4"

regex = "1.5.6"

[build-dependencies]
tonic-build = "0.7.2" #build protobuffs during compilation